# news_site

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
news/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
news/migrations/: 0001_initial.py
news/templatetags/: news_tags.py
static/css/: styles.css
templates/: base.html
templates/inclusions/: header.html
templates/news/: add_post.html  home.html  login.html  news_by_category.html  news_detail.html  register.html  search_results.html
