[tool.poetry]
name = "news-site"
version = "0.1.0"
description = ""
authors = ["KoKoHb <kokohb@ukr.net>"]
readme = "README.md"
packages = [{include = "news_site"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
ipython = "^8.5.0"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
